--- a/compiler/dumplang.cabal
+++ b/compiler/dumplang.cabal
@@ -68,12 +68,19 @@ executable dumplang
     build-depends:
       , base ^>=4.16.4.0
       , relude ^>= 1.1.0.0
+      , mtl
       , megaparsec ^>= 9.2.0
 
     mixins:
       , base hiding (Prelude)
       , relude (Relude as Prelude)
       , relude
+
+    other-modules:
+      , Common
+      , Core
+      , Expr
+      , Instruction
 
     -- Directories containing source files.
     hs-source-dirs:   app
